--- a/client/src/components/Login/styles.module.css
+++ b/client/src/components/Login/styles.module.css
@@ -66,7 +66,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	background-color: #3bb19b;
+	background-color: #02044A;
 	border-top-right-radius: 10px;
 	border-bottom-right-radius: 10px;
 }
@@ -93,7 +93,7 @@
 }
 
 .green_btn {
-	background-color: #3bb19b;
+	background-color: #02044A;
 	color: white;
 	margin: 10px;
 }
