--- a/client/src/components/Login/styles.module.css
+++ b/client/src/components/Login/styles.module.css
@@ -66,7 +66,8 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	background-color: #02044A;
+	/* background-color: #02044A; */
+	background-color: #000000;
 	border-top-right-radius: 10px;
 	border-bottom-right-radius: 10px;
 }
@@ -93,7 +94,8 @@
 }
 
 .green_btn {
-	background-color: #02044A;
+	background-color: #000000;
+	/* background-color: #02044A; */
 	color: white;
 	margin: 10px;
 }
